[package]
name = "rockmore-git"
version = "0.1.0"
authors = ["ksqsf <i@ksqsf.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "git-mount"
path = "bin/git-mount.rs"

[dependencies]
fuse = "0.3"
git2 = { git = "https://github.com/ksqsf/git2-rs" }
log = "0.4"
env_logger = "0.6"
clap = "2.33.0"
libc = "0.2.62"
time = "0.1.42"
openat = { git = "https://github.com/ksqsf/openat" }
